--- a/omcsa/templates/index.html
+++ b/omcsa/templates/index.html
@@ -9,13 +9,20 @@
 
 <body>
 	<h1>Submit a Comment</h1>
-	<form method="post">
+	<form method="post" enctype="multipart/form-data">
 		{% csrf_token %}
 		<textarea name="comment" rows="4" cols="50" placeholder="Enter your comment here..."></textarea><br>
+		<input type="file" name="file"><br>
 		<input type="submit" value="Submit">
-		{% if sentiment %}
-		<h2>Sentiment: {{ sentiment }}</h2>
-		{% endif %}
+	</form>
+	{% if sentiments %}
+	<h2>Sentiment Analysis Results:</h2>
+	<ul>
+		{% for comment, lang, sentiment in sentiments %}
+		<li>Original: {{ comment }} (Language: {{ lang }}), Sentiment: {{ sentiment }}</li>
+		{% endfor %}
+	</ul>
+	{% endif %}
 	</form>
 </body>
 
