--- a/omcsa/static/css/style.css
+++ b/omcsa/static/css/style.css
@@ -5,4 +5,20 @@
     left: 50%;
     transform: translate(-50%, -50%);
     z-index: 1000;
+    display: none; /* Ensure it's hidden by default */
+}
+
+.spinner-border {
+    width: 3rem;
+    height: 3rem;
+    border-width: 0.3rem;
+    border-style: solid;
+    border-color: #f3f3f3 transparent #f3f3f3 transparent;
+    border-radius: 50%;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
 }
