--- a/omcsa/templates/index.html
+++ b/omcsa/templates/index.html
@@ -28,6 +28,7 @@
                 <input type="file" class="form-control-file" id="file" name="file">
                 {% if uploaded_file %}
                 <p>Uploaded file: {{ uploaded_file.name }}</p>
+                
                 {% endif %}
             </div>
             <div class="form-group">
@@ -44,7 +45,7 @@
             <button type="submit" class="btn btn-primary animate__animated animate__pulse animate__infinite">Analyze</button>
         </form>
 
-        <div id="loading-spinner" class="spinner-border text-primary" role="status" style="display: none;">
+        <div id="loading-spinner" class="spinner-border" role="status">
             <span class="sr-only">Loading...</span>
         </div>
 
@@ -94,7 +95,7 @@
                         'rgba(255, 206, 86, 1)',
                         'rgba(255, 99, 132, 1)'
                     ],
-                    borderWidth: 1 
+                    borderWidth: 1
                 }]
             };
             var sentimentChart = new Chart(ctx, {
